fixed overflow

--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -2,6 +2,8 @@ body,
 html {
     margin: 0;
     padding: 0;
+    max-width: 100%;
+    overflow-x: hidden;
 }
 
 .spinner {
